--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!--Insert logo link here-->
 </head>
 <body>
-	<header><h1 style="color:blue;">InterHobby</h1></header>
+	<header><h1>InterHobby</h1></header>
 	<h2>Welcome to Interhobby</h2>
 	<main></main>
 	<footer></footer>
