--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header><h1>InterHobby</h1></header>
 	<h2>Welcome to Interhobby</h2>
-	<main></main>
-	<footer></footer>
+	<main><p>This is where more stuff would go. Right now this is a marker for future content and for styling purposes</p></main>
+	<footer>This is the placeholder for the footer. Enjoy! :)</footer>
 </body>
 </html>
