--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<header><h1>InterHobby</h1>
 	<h2>Welcome to Interhobby</h2></header>
-	<main><p>This is where more stuff would go. Right now this is a marker for future content and for styling purposes</p></main>
-	<footer>This is the placeholder for the footer. Enjoy! :)</footer>
+	<main><p>This is where more stuff would go. Right now this is a marker for future content and for styling purposes</p>
+	</main>
+	<footer>This is the placeholder for the footer. Enjoy! :) Here's a link to this same website <a href="https://interhobby.github.io/main/">InterHobby site location</a></footer>
 </body>
 </html>
