--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<header><h1>InterHobby</h1>
 	<h2>Welcome to Interhobby</h2></header>
 	<main><p>This is where more stuff would go. Right now this is a marker for future content and for styling purposes</p>
+		<p>More meaningless text! More meaningless text! More meaningless text! More meaningless text! More meaningless text! More meaningless text!</p>
+		<p>Surprise this is also meaningless text, sorry if you spent the time reading this! Surprise this is also meaningless text, sorry if you spent the time reading this! Surprise this is also meaningless text, sorry if you spent the time reading this! Surprise this is also meaningless text, sorry if you spent the time reading this! Surprise this is also meaningless text, sorry if you spent the time reading this!</p>
 	</main>
-	<footer>This is the placeholder for the footer. Enjoy! :) Here's a link to this same website <a href="https://interhobby.github.io/main/">InterHobby site location</a></footer>
+	<footer>This is the placeholder for the footer. Enjoy! :) Here's a link to this same website <a href="https://interhobby.github.io/main/">InterHobby site location</a>.</footer>
 </body>
 </html>
